--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Pypong by JohnReeves</title>
+    <title>PyPong by John Reeves</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,9 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">Pypong</h1>
       <h2 class="project-tagline">A pong game in Tkinter</h2>
-      <a href="https://github.com/JohnReeves/PyPong" class="btn">View on GitHub</a>
-      <a href="https://github.com/JohnReeves/PyPong/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/JohnReeves/PyPong/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
