--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Pypong</h1>
+      <h1 class="project-name">PyPong</h1>
       <h2 class="project-tagline">A pong game in Tkinter</h2>
     </section>
 
     <section class="main-content">
       <h1>
-<a id="python-pong-worksheet" class="anchor" href="#python-pong-worksheet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Python Pong worksheet</h1>
+<a id="python-pong-worksheet" class="anchor" href="#python-pong-worksheet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h1>
 
 <h2>
 <a id="task-1---the-minimal-tk-canvas" class="anchor" href="#task-1---the-minimal-tk-canvas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task 1 - The minimal tk canvas</h2>
