Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>PyPong by John Reeves</title>
+    <title>Pypong by JohnReeves</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,13 +11,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">PyPong</h1>
+      <h1 class="project-name">Pypong</h1>
       <h2 class="project-tagline">A pong game in Tkinter</h2>
+      <a href="https://github.com/JohnReeves/PyPong" class="btn">View on GitHub</a>
+      <a href="https://github.com/JohnReeves/PyPong/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/JohnReeves/PyPong/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
       <h1>
-<a id="python-pong-worksheet" class="anchor" href="#python-pong-worksheet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h1>
+<a id="python-pong-worksheet" class="anchor" href="#python-pong-worksheet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Python Pong worksheet</h1>
 
 <h2>
 <a id="task-1---the-minimal-tk-canvas" class="anchor" href="#task-1---the-minimal-tk-canvas" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Task 1 - The minimal tk canvas</h2>
